styles/overlays.less
atom-panel.modal,
.overlay {
  .overlay-shadow();
  .text(normal);
  color: @text-color;
  background-color: @overlay-background-color;
  border-radius: @component-border-radius !important;
  border: 1px solid @base-border-color !important;
  padding: @component-padding @component-padding*2;
  width: 680px;
  margin-left: -340px;

  label,
  p {
    .text(light);
  }

  atom-text-editor[mini],
  atom-text-editor[mini]::shadow {
    .text(light);
    font-size: 24px;
    line-height: 32px;
    height: 32px + @component-padding;
    max-height: none;
    white-space: nowrap;
    color: @text-color-highlight;
    background-color: transparent;
    margin: 0 -@component-padding*2;
    padding: 0 @component-padding*2;
    border: 0;
    border-radius: 0;
    border-bottom: 1px solid @base-border-color;


    &.is-focused:hover,
    &:hover {
      background-color: transparent !important;
    }
  }

  &.from-top {
    top: 20%;
  }

  .loading,
  .error-message {
    .text(subtle);
    height: @component-line-height + @component-padding;
    line-height: @component-line-height + @component-padding;
    padding-bottom: @component-padding;
  }

  ul.list-group,
  .select-list ol.list-group,
  &.select-list ol.list-group {
    margin: 0 -@component-padding*2 -@component-padding;

    li .character-match {
      .text(normal);
    }

    li.selected .character-match {
      .text(selected);
    }

    li {
      padding: @component-padding/2 @component-padding*2;

      &.two-lines {
        padding: @component-padding/2 @component-padding*2;
      }

      .status.icon {
        float: right;
        margin-left: @component-icon-padding;

        &:before {
          margin-right: 0;
        }
      }

      &.selected {
        border-radius: 0 !important;

        .status.icon {
          color: @text-color-selected;
        }
      }
    }
  }
}

atom-panel.modal {
  & > div > atom-text-editor[mini]:before {
    color: @text-color-subtle;
    font-family: "Octicons Regular";
    padding-right: @component-padding;
    -webkit-font-smoothing: antialiased;
    content: "\f011";
  }

  & > .command-palette > atom-text-editor[mini]:before {
    content: "\f0c8";
  }

  & > .encoding-selector > atom-text-editor[mini]:before {
    content: "\f094";
  }

  & > .grammar-selector > atom-text-editor[mini]:before {
    content: "\f010";
  }

  & > .symbols-view > atom-text-editor[mini]:before {
    content: "\f0c0";
  }

  & > .fuzzy-finder > atom-text-editor[mini]:before {
    content: "\f02e";
  }

  & > .diff-list-view > atom-text-editor[mini]:before {
    content: "\f0d6";
  }
}

